--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="site-heading">
                         <h1> git Blog</h1>
                         <hr class="small">
-                        <span class="subheading">Learning Git Today!</span>
+                        <span class="subheading">Learning Git Today on a branch!</span>
                     </div>
                 </div>
             </div>
