--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+    <header class="intro-header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
 
-                        <h1> Branch Blog</h1>
+                        <h1> New feature</h1>
 
                         <hr class="small">
-                        <span class="subheading">Learning Git Today on a branch!</span>
+                        <span class="subheading">Learning a git feature!</span>
                     </div>
                 </div>
             </div>
