--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
 
-                        <h1> New feature</h1>
+                        <h1 style = "color:#ff69b4"> New feature</h1>
 
                         <hr class="small">
-                        <span class="subheading">Learning a git feature!</span>
+                        <span class="subheading" style = "color:#ff69b4">Learning a git feature!</span>
                     </div>
                 </div>
             </div>
